data/derived/comb/progs/unify/prog7049.ml.out
Characters 512-524:
  | Trip(x,y,z)      -> "(("^ exprToString x ^ "%30.0)" ^ exprToString ^
                                                          ^^^^^^^^^^^^
Error: This expression has type expr -> string
       but an expression was expected of type string
